--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
 
 <body>
     
+    <img src="./images/tbilisi.png" alt="batumi" id="batumi">
+
+    <div class="navbar">
+        <div class="navbar_inner">
+            <ul class="navbar_inner_list">
+                <li class="navbar_inner_list_links"><a href="./batumi.html">Batumi</a></li>
+                <li class="navbar_inner_list_links"><a href="./newyork.html">New York</a></li>
+            </ul>
+        </div>
+    </div>
+
     <div class="wether_card">
         <div class="top_section">
             <span id="logo"></span>
             <span id="temp">C</span>
-            <span id="location">lsocation</span>
+            <span id="location">location</span>
         </div>
 
     <div class="middle_section">
